--- a/testgit.html
+++ b/testgit.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>HTML</p>
-    <p>test</p>
+    <h1>HTML1</h1>
+    <h2>Goodbye</h2>
 </body>
 </html>
