--- a/testgit2.html
+++ b/testgit2.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Kanazawa</h1>
+    <h1>Kanazawa - My home</h1>
     <h2>Ishikawa</h2>
+    <h3>Japan</h3>
 </body>
 </html>
