--- a/testgit2.html
+++ b/testgit2.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Kanazawa - My home</h1>
-    <h2>Ishikawa</h2>
+    <h2>Ishikawa - Prep</h2>
     <h3>Japan</h3>
+    <p>Will you go with me?</p>
 </body>
 </html>
