--- a/son.html
+++ b/son.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <h2>
-Chao moi nguoi ok lan 2
-
+Chao moi Toi dang o develop!
     </h2>
-    <h1>Class1 thay doi lan 2</h1>
-    <h3>Class 2 thay doi lan 2</h3>
-    <h4>Thay doi lan 2</h4>
+    <h1>Class1gsdfgsg</h1>
+    <h3>Class sgf</h3>
+    <h4>Thagdgsg</h4>
 </body>
 </html>
