--- a/textalin.html
+++ b/textalin.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>alo</h1>
-    <p> bai tap</p>
-
-    <h2> clone</h2>
+    <h1> lol</h1>
+    <h3> vasf</h3>
 </body>
 </html>
