--- a/son.html
+++ b/son.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h2>
-Chao moi toi moi doi o class 1
-
+Đây là branch Develop
     </h2>
     <h1>Class1gsdfgsg</h1>
     <h3>Class sgf</h3>
